# wave-chunk-parser

./: .gitignore  MANIFEST.in  README.md  ReadMe.md  chunks.py  exceptions.py  hello.txt  pyproject.toml  requirements.txt  setup.py  utils.py
.github/workflows/: lint-test-coverage.yml
test/: test_cart.py  test_data.py  test_format.py  test_read.py  test_utils.py  test_wave.py
test/files/: cart_bad_length.blob  cart_cc_101.blob  cart_cc_101.json  cart_long.blob  cart_long.json  cart_no_tag.blob  cart_no_tag.json
tests/: test_cart.py  test_cue.py  test_cue_chunk.py  test_data.py  test_format.py  test_label.py  test_label_cue.py  test_labelled_text.py  test_list.py  test_utils.py  test_wave.py  waveparser.py
tests/files/: cue.blob  cue_chunk.blob  label.blob  list.blob  reaper_01.blob  reaper_02.blob  riff_bad_type.blob
wave_chunk_parser/: chunks.py  exceptions.py  utils.py
