[tool.poetry]
name = "wave-chunk-parser"
version = "1.5.0"
description = ""
authors = ["Marc Steele <steelegbr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
parameterized = "^0.9.0"
unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
coverage = "^7.4.4"
twine = "^5.0.0"
setuptools = "^70.1.0"
wheel = "^0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
